# asyncFastApiStore

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.RU.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: db_project.db  exceptions.py  main.py
backend/app/api/v1/: auth.py  chat.py  item.py  user.py
backend/app/core/: conf.py  database.py  logger.py
backend/app/dao/: base.py  chat.py  item.py  user.py
backend/app/dependencies/: chat.py  database.py  user.py
backend/app/helpers/: paginator.py  security.py  socket_manager.py  upload.py
backend/app/migrations/: env.py
backend/app/models/: base.py  chat.py  item.py  user.py
backend/app/schemas/: base.py  chat.py  item.py  user.py
backend/app/templates/: base.html  chat.html
