[tool.poetry]
package-mode = false
name = "asyncFastApiStore"
version = "0.1.0"
description = "Simple Demo of FastApi"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }
aiosqlite = "^0.20.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"
orjson = "^3.10.7"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
