[tool.poetry]
package-mode = false
name = "asyncFastApiStore"
version = "0.1.0"
description = "Simple Demo of FastApi"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }
aiosqlite = "^0.20.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.16"
orjson = "^3.10.10"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
websockets = "^13.1"
jinja2 = "^3.1.4"
aiohttp = "^3.10.10"
pydantic = "^2.9.2"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
